# hansol_deco_llm_dacon

./: .gitignore  README.md  finetuning.py  pyproject.toml  requirements.txt  test.py  test_gk.py  test_question_seperate.py  test_rag.py
notebooks/: EDA.ipynb  chromadb.ipynb  finetuning.ipynb  inference.ipynb  prompts_gk.ipynb  prompts_gk_rag.ipynb  test.ipynb
