[tool.poetry]
name = "upstage-finetuning"
version = "0.1.0"
description = ""
authors = ["steelbear <steelbear@kunsan.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bitsandbytes = "0.41.1"
accelerate = "0.21.0"
appdirs = "^1.4.4"
loralib = "^0.1.2"
black = {extras = ["jupyter"], version = "^24.1.1"}
datasets = "^2.16.1"
fire = "^0.5.0"
peft = {git = "https://github.com/huggingface/peft"}
transformers = "^4.37.2"
sentencepiece = "^0.1.99"
sentence-transformers = "^2.3.1"
scipy = "^1.12.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
notebook = "^7.0.7"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
